# TurboPFor-CPP

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md
.agents/changes/01-all-bitwidths-outperform/: 00.request.md  01-specification.md  02-plan.md  03-tasks-00-READBEFORE.md  03-tasks-01-baseline.md  03-tasks-02-d1-decode-b32-and-p32.md  03-tasks-03-d1-decode-remaining.md  03-tasks-04-d1ex-decode.md  03-tasks-05-encode-fused.md  03-tasks-06-scalar-verify.md  03-tasks-07-final-verify.md  PROGRESS.md
.agents/changes/02-256v64-implementation/: 00.request.md  01-specification.md  02-plan.md  03-tasks-00-READBEFORE.md  03-tasks-01-baseline-stabilize.md  03-tasks-02-api-dispatch-build.md  03-tasks-03-tests-bench.md  03-tasks-04-simd-gate-or-optimize.md  03-tasks-05-final-verify.md  03-tasks-06-simd-decode-correctness.md  03-tasks-07-simd-decode-performance.md  03-tasks-08-final-perf-verify.md  04-commit-msg.md  PROGRESS.md
benchmarks/: ab_test.cpp  flat_bench.cpp  run_all.sh
include/: turbopfor.h
src/: dispatch.cpp
src/scalar/: bitpack128v32_scalar.cpp  bitpack128v64_scalar.cpp  bitpack256v32_scalar.cpp  bitpack256v64_scalar.cpp  p4_scalar.h  p4_scalar_bitpack32.cpp  p4_scalar_bitpack64.cpp  p4_scalar_bitpack64_impl.h  p4_scalar_bitpack_impl.h  p4_scalar_bitunpack32.cpp  p4_scalar_bitunpack64.cpp  p4_scalar_bitunpack64_impl.h  p4_scalar_bitunpack_impl.h  p4_scalar_bitunpackd1_32.cpp  p4_scalar_bitunpackd1_64.cpp  p4_scalar_internal.cpp  p4_scalar_internal.h  p4bits128_scalar.h  p4d1dec128v32_scalar.cpp  p4d1dec128v64_scalar.cpp  p4d1dec256v32_scalar.cpp  p4d1dec256v64_scalar.cpp  p4d1dec32.cpp  p4d1dec64.cpp  p4d1enc128v32_scalar.cpp  p4d1enc128v64_scalar.cpp  p4d1enc256v32_scalar.cpp  p4d1enc256v64_scalar.cpp  p4d1enc32.cpp  p4d1enc64.cpp  p4dec128v32_scalar.cpp  p4dec256v32_scalar.cpp  p4dec32.cpp  p4dec64.cpp  p4enc128v32_scalar.cpp  p4enc128v64_scalar.cpp  p4enc256v32_scalar.cpp  p4enc256v64_scalar.cpp  p4enc32.cpp  p4enc64.cpp
src/simd/: bitpack128v32_simd.cpp  bitpack128v64_simd.cpp  bitpack256v32_simd.cpp  bitunpack128v32_simd.cpp  bitunpack256v32_simd.cpp  bitunpack_avx2_templates.h  bitunpack_sse_templates.h  p4_simd.h  p4_simd_internal.cpp  p4_simd_internal.h  p4_simd_internal_256v.cpp  p4_simd_internal_256v.h  p4bits128_simd.h  p4d1dec128v32.cpp  p4d1dec128v64.cpp  p4d1dec256v32.cpp  p4d1dec256v64.cpp  p4d1dec32_simd.cpp  p4d1enc128v32.cpp  p4d1enc128v64.cpp  p4d1enc256v32.cpp  p4d1enc256v64.cpp  p4dec128v32.cpp  p4dec128v64.cpp  p4dec256v32.cpp  p4dec256v64.cpp  p4enc128v32.cpp  p4enc128v64.cpp  p4enc256v32.cpp  p4enc256v64.cpp
tests/: binary_compat_test.cpp  test_d1enc.cpp  test_helpers.h  test_main.cpp  test_p4_32.cpp  test_p4_64.cpp  test_p4dec_32.cpp  test_p4dec_64.cpp  vbyte64_test.cpp  vbyte_probe.c
